fix: reduced padding to match design. grid spacing was creating a single column in some devices

--- a/src/app/productos/[productId]/productDetail.scss
+++ b/src/app/productos/[productId]/productDetail.scss
@@ -135,7 +135,7 @@
 }
 
 .interest {
-  padding: 20px;
+  padding: 20px 12px;
 
   @include for-tablet-portrait-up {
     padding: 20px 40px 40px;
